--- a/COVID_POS_MTA/index.html
+++ b/COVID_POS_MTA/index.html
@@ -103,7 +103,7 @@ d3.csv("data2a.csv", function(error, data) {
         .attr("y", 0 - (margin.top / 2))
         .attr("text-anchor", "middle")  
         .style("font-size", "16px") 
-        .text("NYC Subway Ridership (mllns) vs. COVID Positivity, 7-Day Avg");
+        .text("Subway Ridership (mm) vs. COVID Positivity, 7-Day Avg thru 1/23/2022");
 
 
 
