--- a/COVID_POS_MTA/index.html
+++ b/COVID_POS_MTA/index.html
@@ -127,7 +127,7 @@ d3.csv("data2a.csv", function(error, data) {
         .attr("text-anchor", "middle")  
         .style("font-size", "15px") 
         .style("fill", "steelblue")
-        .text("Subway Ridership (mm)");  
+        .text("Subway Ridership (7-DAy Avg, MM)");  
 
     svg.append("text")
         .attr("x", (width / 2))
@@ -136,7 +136,7 @@ d3.csv("data2a.csv", function(error, data) {
         .attr("text-anchor", "middle")
         .style("font-size", "14px")
         .style("fill", "red")
-        .text("COVID Test Positivity");  
+        .text("COVID Test Positivity (7-DAy Avg, %");  
 
 
     svg.append("text")
