--- a/COVID_POS_MTA/index.html
+++ b/COVID_POS_MTA/index.html
@@ -136,7 +136,7 @@ d3.csv("data2a.csv", function(error, data) {
         .attr("text-anchor", "middle")
         .style("font-size", "14px")
         .style("fill", "red")
-        .text("COVID Test Positivity (7-Day Avg, %");  
+        .text("COVID Test Positivity (7-Day Avg, %)");  
 
 
     svg.append("text")
