--- a/DMV_Covid_Electric/Maps/index.html
+++ b/DMV_Covid_Electric/Maps/index.html
@@ -73,3 +73,30 @@
 
  </style>
 </head>
+
+<body>
+
+    <div>
+        <iframe src="https://kjohnso.github.io/DMV_Covid_Electric/Maps/MapOutputChloroPlotlyExpressBBBPercDiff.html" id="chart1"></iframe>
+    </div>
+
+
+    <div>
+        <iframe src="https://kjohnso.github.io/DMV_Covid_Electric/Maps/MapOutputChloroPlotlyExpressBBBPercElectric.html" id="chart2"></iframe>
+    </div>
+
+
+    <div>
+        <iframe src="https://kjohnso.github.io/DMV_Covid_Electric/Maps/MapOutputChloroPlotlyExpressBBBCOR_2019.html" id="chart3"></iframe>
+    </div>
+    <div>
+        <iframe src="https://kjohnso.github.io/DMV_Covid_Electric/Maps/MapOutputChloroPlotlyExpressBBBMedHH_Inc.html" id="chart4"></iframe>
+    </div>
+
+
+
+
+
+</body>
+
+</html>
