--- a/DMV_Covid_Electric/Maps/index.html
+++ b/DMV_Covid_Electric/Maps/index.html
@@ -77,20 +77,20 @@
 <body>
 
     <div>
-        <iframe src="https://kjohnso.github.io/DMV_Covid_Electric/Maps/MapOutputChloroPlotlyExpressBBBPercDiff.html" id="chart1"></iframe>
+        <iframe src="https://kjohnso.github.io/DMV_Covid_Electric/Maps/MapOutputChloroPlotlyExpressBBBPercDiff" id="chart1"></iframe>
     </div>
 
 
     <div>
-        <iframe src="https://kjohnso.github.io/DMV_Covid_Electric/Maps/MapOutputChloroPlotlyExpressBBBPercElectric.html" id="chart2"></iframe>
+        <iframe src="https://kjohnso.github.io/DMV_Covid_Electric/Maps/MapOutputChloroPlotlyExpressBBBPercElectric" id="chart2"></iframe>
     </div>
 
 
     <div>
-        <iframe src="https://kjohnso.github.io/DMV_Covid_Electric/Maps/MapOutputChloroPlotlyExpressBBBCOR_2019.html" id="chart3"></iframe>
+        <iframe src="https://kjohnso.github.io/DMV_Covid_Electric/Maps/MapOutputChloroPlotlyExpressBBBCOR_2019" id="chart3"></iframe>
     </div>
     <div>
-        <iframe src="https://kjohnso.github.io/DMV_Covid_Electric/Maps/MapOutputChloroPlotlyExpressBBBMedHH_Inc.html" id="chart4"></iframe>
+        <iframe src="https://kjohnso.github.io/DMV_Covid_Electric/Maps/MapOutputChloroPlotlyExpressBBBMedHH_Inc" id="chart4"></iframe>
     </div>
 
 
